add new commands, and error command

--- a/API/API.csproj
+++ b/API/API.csproj
@@ -10,7 +10,7 @@
 
   <ItemGroup>
     <Reference Include="VKApiCore">
-      <HintPath>bin\Debug\VKApiCore.dll</HintPath>
+      <HintPath>..\..\VKApiCore\VKApiCore\bin\Release\netcoreapp2.0\VKApiCore.dll</HintPath>
     </Reference>
   </ItemGroup>
 
